@@ -1,0 +1,5 @@
+<p>Organisers for current user:</p>
+
+<pre>
+<?=print_r($organisers)?>
+</pre>
