@@ -1,7 +1,7 @@
 CREATE TABLE attendee (id BIGINT AUTO_INCREMENT, user_id BIGINT NOT NULL, has_main_ticket TINYINT(1) DEFAULT '0', INDEX user_id_idx (user_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
 CREATE TABLE attendee_ticket (id BIGINT AUTO_INCREMENT, attendee_id BIGINT NOT NULL, ticket_id BIGINT NOT NULL, INDEX ticket_id_idx (ticket_id), INDEX attendee_id_idx (attendee_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
 CREATE TABLE category (id BIGINT AUTO_INCREMENT, name VARCHAR(64), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
-CREATE TABLE event (id BIGINT AUTO_INCREMENT, category_id BIGINT NOT NULL, organiser_id BIGINT NOT NULL, title VARCHAR(64) NOT NULL, description TEXT NOT NULL, start_date DATETIME, end_date DATETIME, start_hour TIME NOT NULL, end_hour TIME NOT NULL, logo VARCHAR(128), listing_color VARCHAR(8), moderated TINYINT(1) DEFAULT '0', venue_name VARCHAR(64), venue_address VARCHAR(128) NOT NULL, venue_city VARCHAR(32) NOT NULL, venue_postal_code BIGINT, venue_latitude FLOAT(18, 2), venue_longitude FLOAT(18, 2), venue_eventbrite_id BIGINT, eventbrite_id BIGINT, eventbrite_logo_url VARCHAR(128), eventbrite_created DATETIME, eventbrite_modified DATETIME, created_at DATETIME NOT NULL, updated_at DATETIME NOT NULL, INDEX category_id_idx (category_id), INDEX organiser_id_idx (organiser_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
+CREATE TABLE event (id BIGINT AUTO_INCREMENT, category_id BIGINT NOT NULL, organiser_id BIGINT NOT NULL, title VARCHAR(64) NOT NULL, description TEXT NOT NULL, start_date DATETIME, end_date DATETIME, start_hour TIME NOT NULL, end_hour TIME NOT NULL, logo VARCHAR(128), listing_color VARCHAR(8), moderated TINYINT(1) DEFAULT '0', venue_name VARCHAR(64), venue_address VARCHAR(128) NOT NULL, venue_city VARCHAR(32) NOT NULL, venue_postal_code BIGINT, venue_latitude DECIMAL(10, 7), venue_longitude DECIMAL(10, 7), venue_eventbrite_id BIGINT, eventbrite_id BIGINT, eventbrite_logo_url VARCHAR(128), eventbrite_created DATETIME, eventbrite_modified DATETIME, created_at DATETIME NOT NULL, updated_at DATETIME NOT NULL, INDEX category_id_idx (category_id), INDEX organiser_id_idx (organiser_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
 CREATE TABLE event_ticket (event_id BIGINT, ticket_id BIGINT, PRIMARY KEY(event_id, ticket_id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
 CREATE TABLE organiser (id BIGINT AUTO_INCREMENT, user_id BIGINT, name VARCHAR(64), description TEXT, logo VARCHAR(128), url VARCHAR(128), twitter VARCHAR(128), facebook VARCHAR(128), eventbrite_id BIGINT, INDEX user_id_idx (user_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
 CREATE TABLE ticket (id BIGINT AUTO_INCREMENT, event_id BIGINT NOT NULL, name VARCHAR(64), description TEXT, price FLOAT(18, 2), end_date DATETIME, quantity_declared BIGINT NOT NULL, quantity_paid BIGINT, quantity_free BIGINT, eventbrite_id BIGINT, evenbrite_id_free BIGINT, created_at DATETIME NOT NULL, updated_at DATETIME NOT NULL, INDEX event_id_idx (event_id), PRIMARY KEY(id)) DEFAULT CHARACTER SET UTF8 ENGINE = innodb;
